--- a/client/Imitation_QQ/add_friend.ui
+++ b/client/Imitation_QQ/add_friend.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>390</width>
-    <height>840</height>
+    <height>740</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>390</width>
-    <height>840</height>
+    <height>740</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>390</width>
-    <height>840</height>
+    <height>740</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -82,7 +82,7 @@
        </size>
       </property>
       <property name="text">
-       <string>返回</string>
+       <string>取消</string>
       </property>
      </widget>
     </item>
