--- a/client/Imitation_QQ/l_friend.ui
+++ b/client/Imitation_QQ/l_friend.ui
@@ -7,8 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>390</width>
-    <height>840</height>
+    <height>740</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>390</width>
+    <height>740</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>390</width>
+    <height>740</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -149,6 +161,19 @@
    </property>
    <property name="text">
     <string>添加好友</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_logout">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>700</y>
+     <width>250</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>退出登录</string>
    </property>
   </widget>
  </widget>
