--- a/client/Imitation_QQ/mainwindow.ui
+++ b/client/Imitation_QQ/mainwindow.ui
@@ -10,19 +10,19 @@
     <x>0</x>
     <y>0</y>
     <width>390</width>
-    <height>840</height>
+    <height>700</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>390</width>
-    <height>840</height>
+    <height>700</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>390</width>
-    <height>840</height>
+    <height>700</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -39,7 +39,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>160</y>
+      <y>120</y>
       <width>111</width>
       <height>81</height>
      </rect>
@@ -64,7 +64,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>780</y>
+      <y>670</y>
       <width>310</width>
       <height>20</height>
      </rect>
@@ -97,132 +97,153 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QWidget" name="widget" native="true">
+   <widget class="QPushButton" name="btn_login">
     <property name="geometry">
      <rect>
-      <x>-10</x>
-      <y>240</y>
-      <width>401</width>
-      <height>181</height>
+      <x>30</x>
+      <y>400</y>
+      <width>330</width>
+      <height>30</height>
      </rect>
     </property>
-    <widget class="QLineEdit" name="account">
-     <property name="enabled">
-      <bool>true</bool>
-     </property>
-     <property name="geometry">
-      <rect>
-       <x>40</x>
-       <y>30</y>
-       <width>330</width>
-       <height>50</height>
-      </rect>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>330</width>
-       <height>50</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>330</width>
-       <height>50</height>
-      </size>
-     </property>
-     <property name="text">
-      <string>输入账号</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="password">
-     <property name="enabled">
-      <bool>true</bool>
-     </property>
-     <property name="geometry">
-      <rect>
-       <x>40</x>
-       <y>110</y>
-       <width>330</width>
-       <height>50</height>
-      </rect>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>330</width>
-       <height>50</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>330</width>
-       <height>50</height>
-      </size>
-     </property>
-     <property name="text">
-      <string>输入密码</string>
-     </property>
-    </widget>
+    <property name="minimumSize">
+     <size>
+      <width>330</width>
+      <height>30</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>330</width>
+      <height>30</height>
+     </size>
+    </property>
+    <property name="text">
+     <string>登录</string>
+    </property>
    </widget>
-   <widget class="QWidget" name="widget_2" native="true">
+   <widget class="QCheckBox" name="cbtn_showpwd">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>420</y>
-      <width>391</width>
-      <height>171</height>
+      <x>310</x>
+      <y>360</y>
+      <width>81</width>
+      <height>22</height>
      </rect>
     </property>
-    <widget class="QPushButton" name="btn_login">
-     <property name="geometry">
-      <rect>
-       <x>30</x>
-       <y>20</y>
-       <width>330</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>330</width>
-       <height>30</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>330</width>
-       <height>30</height>
-      </size>
-     </property>
-     <property name="text">
-      <string>登录</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btn_register">
-     <property name="geometry">
-      <rect>
-       <x>30</x>
-       <y>80</y>
-       <width>330</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>330</width>
-       <height>30</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>330</width>
-       <height>30</height>
-      </size>
-     </property>
-     <property name="text">
-      <string>注册</string>
-     </property>
-    </widget>
+    <property name="text">
+     <string>显示密码</string>
+    </property>
    </widget>
+   <widget class="QPushButton" name="btn_register">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>460</y>
+      <width>330</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>330</width>
+      <height>30</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>330</width>
+      <height>30</height>
+     </size>
+    </property>
+    <property name="text">
+     <string>注册</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="password">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>310</y>
+      <width>330</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>330</width>
+      <height>50</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>330</width>
+      <height>50</height>
+     </size>
+    </property>
+    <property name="text">
+     <string>输入密码</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="account">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>230</y>
+      <width>330</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>330</width>
+      <height>50</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>330</width>
+      <height>50</height>
+     </size>
+    </property>
+    <property name="text">
+     <string>输入账号</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="background">
+    <property name="geometry">
+     <rect>
+      <x>-390</x>
+      <y>-270</y>
+      <width>1920</width>
+      <height>1080</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+hr { height: 1px; border-width: 0; }
+li.unchecked::marker { content: &quot;\2610&quot;; }
+li.checked::marker { content: &quot;\2612&quot;; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Microsoft YaHei UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;img src=&quot;:/MyImage/Image/background.jpg&quot; /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <zorder>background</zorder>
+   <zorder>p_login</zorder>
+   <zorder>label_prot</zorder>
+   <zorder>btn_login</zorder>
+   <zorder>cbtn_showpwd</zorder>
+   <zorder>btn_register</zorder>
+   <zorder>password</zorder>
+   <zorder>account</zorder>
   </widget>
  </widget>
  <resources/>
