--- a/client/Imitation_QQ/regis.ui
+++ b/client/Imitation_QQ/regis.ui
@@ -10,8 +10,20 @@
     <x>0</x>
     <y>0</y>
     <width>390</width>
-    <height>840</height>
+    <height>700</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>390</width>
+    <height>700</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>390</width>
+    <height>700</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -20,7 +32,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>510</y>
+     <y>470</y>
      <width>330</width>
      <height>30</height>
     </rect>
@@ -48,7 +60,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>270</y>
+     <y>230</y>
      <width>330</width>
      <height>50</height>
     </rect>
@@ -76,7 +88,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>420</y>
+     <y>380</y>
      <width>330</width>
      <height>50</height>
     </rect>
@@ -101,7 +113,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>780</y>
+     <y>670</y>
      <width>310</width>
      <height>20</height>
     </rect>
@@ -141,7 +153,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>160</y>
+     <y>120</y>
      <width>111</width>
      <height>81</height>
     </rect>
@@ -169,7 +181,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>350</y>
+     <y>310</y>
      <width>330</width>
      <height>50</height>
     </rect>
