--- a/client/chatting/creatgroup.ui
+++ b/client/chatting/creatgroup.ui
@@ -39,23 +39,7 @@
     <enum>QFrame::Box</enum>
    </property>
    <property name="text">
-    <string>显示在线人数</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="numberShowBtn">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>50</y>
-     <width>250</width>
-     <height>270</height>
-    </rect>
-   </property>
-   <property name="frameShape">
-    <enum>QFrame::Panel</enum>
-   </property>
-   <property name="text">
-    <string>显示好友</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="creatBtn">
@@ -71,56 +55,17 @@
     <string>建立群聊</string>
    </property>
   </widget>
-  <widget class="QRadioButton" name="radioButton">
+  <widget class="QListWidget" name="listWidget">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>100</y>
-     <width>97</width>
-     <height>22</height>
+     <x>0</x>
+     <y>50</y>
+     <width>250</width>
+     <height>270</height>
     </rect>
    </property>
-   <property name="text">
-    <string>RadioButton</string>
-   </property>
-  </widget>
-  <widget class="QRadioButton" name="radioButton_2">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>130</y>
-     <width>97</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>RadioButton</string>
-   </property>
-  </widget>
-  <widget class="QRadioButton" name="radioButton_3">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>170</y>
-     <width>97</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>RadioButton</string>
-   </property>
-  </widget>
-  <widget class="QRadioButton" name="radioButton_4">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>220</y>
-     <width>97</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>RadioButton</string>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOn</enum>
    </property>
   </widget>
  </widget>
