完成了两个聊天页面的设计和双击好友或群显示聊天界面

--- a/client/chatting/groupchatting.ui
+++ b/client/chatting/groupchatting.ui
@@ -281,8 +281,9 @@
        <string>...</string>
       </property>
       <property name="icon">
-       <iconset resource="res.qrc">
-        <normaloff>:/picture/clear.jpg</normaloff>:/picture/clear.jpg</iconset>
+       <iconset>
+        <normalon>:/picture/clear.jpg</normalon>
+       </iconset>
       </property>
       <property name="iconSize">
        <size>
