--- a/client/chatting/groupchat.ui
+++ b/client/chatting/groupchat.ui
@@ -127,6 +127,9 @@
    <property name="sizeAdjustPolicy">
     <enum>QAbstractScrollArea::AdjustIgnored</enum>
    </property>
+   <property name="selectionMode">
+    <enum>QAbstractItemView::NoSelection</enum>
+   </property>
    <property name="sortingEnabled">
     <bool>false</bool>
    </property>
