--- a/client/chatting/creatgroup.ui
+++ b/client/chatting/creatgroup.ui
@@ -67,6 +67,9 @@
    <property name="verticalScrollBarPolicy">
     <enum>Qt::ScrollBarAlwaysOn</enum>
    </property>
+   <property name="selectionMode">
+    <enum>QAbstractItemView::MultiSelection</enum>
+   </property>
   </widget>
  </widget>
  <resources/>
