--- a/client/chatting/addapply.ui
+++ b/client/chatting/addapply.ui
@@ -16,10 +16,10 @@
   <widget class="QPushButton" name="confirmBtn">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>110</y>
-     <width>50</width>
-     <height>24</height>
+     <x>230</x>
+     <y>150</y>
+     <width>70</width>
+     <height>25</height>
     </rect>
    </property>
    <property name="text">
@@ -29,10 +29,10 @@
   <widget class="QPushButton" name="backBtn">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>30</y>
-     <width>50</width>
-     <height>24</height>
+     <x>230</x>
+     <y>60</y>
+     <width>70</width>
+     <height>25</height>
     </rect>
    </property>
    <property name="text">
@@ -42,10 +42,10 @@
   <widget class="QPushButton" name="cancelBtn">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>110</y>
-     <width>50</width>
-     <height>24</height>
+     <x>40</x>
+     <y>150</y>
+     <width>70</width>
+     <height>25</height>
     </rect>
    </property>
    <property name="text">
@@ -53,19 +53,25 @@
    </property>
   </widget>
   <widget class="QLabel" name="message">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>70</y>
-     <width>140</width>
-     <height>40</height>
+     <x>40</x>
+     <y>100</y>
+     <width>260</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="frameShape">
     <enum>QFrame::Panel</enum>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;TextLabel&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
