--- a/client/chatting/addfrient.ui
+++ b/client/chatting/addfrient.ui
@@ -16,44 +16,33 @@
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>100</x>
+     <x>40</x>
      <y>90</y>
-     <width>140</width>
+     <width>260</width>
      <height>40</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QPushButton" name="cancelBtn">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>130</y>
-     <width>50</width>
-     <height>24</height>
-    </rect>
+   <property name="mouseTracking">
+    <bool>true</bool>
    </property>
-   <property name="text">
-    <string>取消</string>
+   <property name="focusPolicy">
+    <enum>Qt::ClickFocus</enum>
    </property>
-  </widget>
-  <widget class="QPushButton" name="confirmBtn">
-   <property name="geometry">
-    <rect>
-     <x>190</x>
-     <y>130</y>
-     <width>50</width>
-     <height>24</height>
-    </rect>
+   <property name="maxLength">
+    <number>20</number>
    </property>
-   <property name="text">
-    <string>确认</string>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+   <property name="placeholderText">
+    <string>点击输入需要添加的用户的账号：</string>
    </property>
   </widget>
   <widget class="QPushButton" name="backBtn">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>30</y>
+     <x>250</x>
+     <y>50</y>
      <width>50</width>
      <height>24</height>
     </rect>
@@ -62,18 +51,47 @@
     <string>返回</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QWidget" name="widget" native="true">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>70</y>
-     <width>121</width>
-     <height>16</height>
+     <x>40</x>
+     <y>130</y>
+     <width>260</width>
+     <height>40</height>
     </rect>
    </property>
-   <property name="text">
-    <string>输入需要添加的账号:</string>
-   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QPushButton" name="cancelBtn">
+      <property name="text">
+       <string>取消</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Fixed</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>30</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <widget class="QPushButton" name="confirmBtn">
+      <property name="text">
+       <string>确认</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
