修改了一下lineEidt的格式

--- a/client/chatting/res.qrc
+++ b/client/chatting/res.qrc
@@ -8,5 +8,7 @@
         <file>picture/slope.jpg</file>
         <file>picture/underline1.jpg</file>
         <file>picture/wx.jpg</file>
+        <file>picture/one.jpg</file>
+        <file>picture/two.jpg</file>
     </qresource>
 </RCC>
